deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bc-explorer
  namespace: baas-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bc-explorer
  template:
    metadata:
      labels:
        app: bc-explorer
    spec:
      serviceAccountName: bc-explorer
      containers:
      - name: viewer
        image: hyperledgerk8s/bc-explorer:v0.1.0
        command:
        - viewer
        args:
        - -v=5
        - -dsn=postgres://bestchains:Passw0rd!@bc-explorer-postgresql.baas-system:5432/bestchains?sslmode=disable
        - -auth=oidc
        ports:
        - containerPort: 9998
        volumeMounts:
        - mountPath: /etc/oidc/oidc-server
          name: oidc-server-ca
          readOnly: true
      - name: listener
        image:  hyperledgerk8s/bc-explorer:v0.1.0
        command:
        - listener
        args:
        - -v=5
        - -dsn=postgres://bestchains:Passw0rd!@bc-explorer-postgresql.baas-system:5432/bestchains?sslmode=disable
        - -auth=oidc
        ports:
        - containerPort: 9999
        volumeMounts:
          - mountPath: /etc/oidc/oidc-server
            name: oidc-server-ca
            readOnly: true
      - name: observer
        image: hyperledgerk8s/bc-explorer:v0.1.0
        command:
          - observer
        args:
          - -v=5
          - -host=http://127.0.0.1:9999
          - -auth=oidc
      volumes:
        - name: oidc-server-ca
          secret:
            defaultMode: 420
            items:
              - key: ca.crt
                path: ca.pem
            secretName: oidc-server-root-secret
