deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bc-explorer-service
  namespace: baas-system
spec:
  selector:
    app: bc-explorer
  ports:
    - protocol: TCP
      port: 9998
      targetPort: 9998
